--- a/optimisation/benchmarking_2.ipynb
+++ b/optimisation/benchmarking_2.ipynb
@@ -174,11 +174,10 @@
     }
    ],
    "source": [
-    "b = benchmark(dirpath='benchmark')\n",
-    "# b = benchmark()\n",
-    "# b.load_circuits(os.path.join('..', 'circuits', 'benchmarking', 'Fast', 'before'), group_name='fast')\n",
-    "# b.load_circuits('generated_circuits', group_name='generated')\n",
-    "# b.load_circuits(os.path.join('..', 'circuits', 'benchmarking', 'Fast', 'nrscm'), group_name='fast', simp_strategy='NRSCM')\n",
+    "# b = benchmark(dirpath='benchmark')\n",
+    "b = benchmark()\n",
+    "b.load_circuits(os.path.join('..', 'circuits', 'benchmarking', 'Fast', 'before'), group_name='fast')\n",
+    "b.load_circuits(os.path.join('..', 'circuits', 'benchmarking', 'Fast', 'nrscm'), group_name='fast', simp_strategy='NRSCM')\n",
     "b.show_attributes()"
    ]
   },
@@ -188,82 +187,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cFlow_reduce(c, params):\n",
-    "    t0 = time.time()\n",
-    "    g = c.to_graph()\n",
-    "    zx.simplify.to_gh(g)\n",
-    "    g2 = zx.simplify.flow_reduce(g,x=params, quiet=True)\n",
-    "    t1 = time.time()\n",
-    "    c2 = zx.extract.extract_simple(g2, up_to_perm=True).to_basic_gates()\n",
-    "    c3 = zx.optimize.basic_optimization(c2.copy(), do_swaps=False).to_basic_gates()\n",
-    "    c4 = zx.optimize.basic_optimization(c2.copy(), do_swaps=True).to_basic_gates()\n",
-    "    t2 = time.time()\n",
-    "    if c4.twoqubitcount() < c3.twoqubitcount(): return c4, t1-t0, t2-t0\n",
-    "    return c3, t1-t0, t2-t0\n",
-    "\n",
-    "def gFlow_reduce(c, params):\n",
-    "    t0 = time.time()\n",
-    "    g = c.to_graph()\n",
-    "    zx.simplify.to_gh(g)\n",
-    "    g2 = zx.simplify.flow_reduce(g,x=params, flow = 'g', quiet=True)\n",
-    "    t1 = time.time()\n",
-    "    c2 = zx.extract.extract_circuit(g2, up_to_perm=True).to_basic_gates()\n",
-    "    c3 = zx.optimize.basic_optimization(c2.copy(), do_swaps=False).to_basic_gates()\n",
-    "    c4 = zx.optimize.basic_optimization(c2.copy(), do_swaps=True).to_basic_gates()\n",
-    "    t2 = time.time()\n",
-    "    if c4.twoqubitcount() < c3.twoqubitcount(): return c4, t1-t0, t2-t0\n",
-    "    return c3, t1-t0, t2-t0\n",
-    "\n",
-    "def zx_heur(c):\n",
-    "    t0 = time.time()\n",
-    "    g = c.to_graph()\n",
-    "    g = zx_heuristics.simplify.teleport_reduce(g)\n",
-    "    g.track_phases = False\n",
-    "    zx_heuristics.simplify.greedy_simp_neighbors(g)\n",
-    "    t1 = time.time()\n",
-    "    c2 = zx_heuristics.extract_circuit(g, up_to_perm=True).to_basic_gates()\n",
-    "    c3 = zx_heuristics.optimize.basic_optimization(c2.copy(), do_swaps=False).to_basic_gates()\n",
-    "    c4 = zx_heuristics.optimize.basic_optimization(c2.copy(), do_swaps=True).to_basic_gates()\n",
-    "    t2 = time.time()\n",
-    "    if c4.twoqubitcount() < c3.twoqubitcount(): return c4, t1-t0, t2-t0\n",
-    "    return c3, t1-t0, t2-t0\n",
     "\n",
     "def basic(c):\n",
     "    c1 = zx.optimize.basic_optimization(c.copy(), do_swaps=False).to_basic_gates()\n",
     "    c2 = zx.optimize.basic_optimization(c.copy(), do_swaps=True).to_basic_gates()\n",
     "    if c2.twoqubitcount() < c1.twoqubitcount(): return c2\n",
     "    return c1\n",
-    "\n",
-    "def int_cliff(c):\n",
-    "    g = c.to_graph()\n",
-    "    zx.simplify.interior_clifford_simp(g,quiet=True)\n",
-    "    c2 = zx.extract_circuit(g,up_to_perm=True).to_basic_gates()\n",
-    "    c3 = zx.optimize.basic_optimization(c2.copy(), do_swaps=False).to_basic_gates()\n",
-    "    c4 = zx.optimize.basic_optimization(c2.copy(), do_swaps=True).to_basic_gates()\n",
-    "    if c4.twoqubitcount() < c3.twoqubitcount(): return c4\n",
-    "    return c3\n",
-    "\n",
-    "def int_cliff2_flow(c):\n",
-    "    g = c.to_graph()\n",
-    "    zx.simplify.to_gh(g)\n",
-    "    zx.simplify.spider_simp(g, quiet=True)\n",
-    "    zx.simplify.int_cliff_flow_simp(g)\n",
-    "    c2 = zx.extract_simple(g,up_to_perm=True).to_basic_gates()\n",
-    "    c3 = zx.optimize.basic_optimization(c2.copy(), do_swaps=False).to_basic_gates()\n",
-    "    c4 = zx.optimize.basic_optimization(c2.copy(), do_swaps=True).to_basic_gates()\n",
-    "    if c4.twoqubitcount() < c3.twoqubitcount(): return c4\n",
-    "    return c3\n",
-    "\n",
-    "def int_cliff2(c):\n",
-    "    g = c.to_graph()\n",
-    "    zx.simplify.to_gh(g)\n",
-    "    zx.simplify.spider_simp(g, quiet=True)\n",
-    "    zx.simplify.int_cliff_flow_simp(g, condition=lambda a,b: True)\n",
-    "    c2 = zx.extract_circuit(g,up_to_perm=True).to_basic_gates()\n",
-    "    c3 = zx.optimize.basic_optimization(c2.copy(), do_swaps=False).to_basic_gates()\n",
-    "    c4 = zx.optimize.basic_optimization(c2.copy(), do_swaps=True).to_basic_gates()\n",
-    "    if c4.twoqubitcount() < c3.twoqubitcount(): return c4\n",
-    "    return c3\n",
     "\n",
     "def full_reduce(c):\n",
     "    g = c.to_graph()\n",
@@ -272,24 +201,72 @@
     "    c3 = zx.optimize.basic_optimization(c2.copy(), do_swaps=False).to_basic_gates()\n",
     "    c4 = zx.optimize.basic_optimization(c2.copy(), do_swaps=True).to_basic_gates()\n",
     "    if c4.twoqubitcount() < c3.twoqubitcount(): return c4\n",
+    "    return c3\n",
+    "\n",
+    "def int_cliff(c):\n",
+    "    g = c.to_graph()\n",
+    "    zx.simplify.to_gh(g)\n",
+    "    g2 = zx.simplify.flow_reduce_3(g,x=None, quiet=True)\n",
+    "    c2 = zx.extract.extract_circuit(g2, up_to_perm=True).to_basic_gates()\n",
+    "    c3 = zx.optimize.basic_optimization(c2.copy(), do_swaps=False).to_basic_gates()\n",
+    "    c4 = zx.optimize.basic_optimization(c2.copy(), do_swaps=True).to_basic_gates()\n",
+    "    if c4.twoqubitcount() < c3.twoqubitcount(): return c4\n",
+    "    return c3\n",
+    "\n",
+    "def int_cliff_lim(c):\n",
+    "    g = c.to_graph()\n",
+    "    zx.simplify.to_gh(g)\n",
+    "    g2 = zx.simplify.flow_reduce_2(g,x=None, flow='g',quiet=True)\n",
+    "    c2 = zx.extract.extract_circuit(g2, up_to_perm=True).to_basic_gates()\n",
+    "    c3 = zx.optimize.basic_optimization(c2.copy(), do_swaps=False).to_basic_gates()\n",
+    "    c4 = zx.optimize.basic_optimization(c2.copy(), do_swaps=True).to_basic_gates()\n",
+    "    if c4.twoqubitcount() < c3.twoqubitcount(): return c4\n",
+    "    return c3\n",
+    "\n",
+    "def int_cliff_lim_flow(c):\n",
+    "    g = c.to_graph()\n",
+    "    zx.simplify.to_gh(g)\n",
+    "    g2 = zx.simplify.flow_reduce_2(g,x=None, flow='causal',quiet=True)\n",
+    "    c2 = zx.extract.extract_simple(g2, up_to_perm=True).to_basic_gates()\n",
+    "    c3 = zx.optimize.basic_optimization(c2.copy(), do_swaps=False).to_basic_gates()\n",
+    "    c4 = zx.optimize.basic_optimization(c2.copy(), do_swaps=True).to_basic_gates()\n",
+    "    if c4.twoqubitcount() < c3.twoqubitcount(): return c4\n",
+    "    return c3\n",
+    "\n",
+    "def nu_flow(c):\n",
+    "    g = c.to_graph()\n",
+    "    zx.simplify.to_gh(g)\n",
+    "    g2 = zx.simplify.flow_reduce(g,x=None, flow='causal',quiet=True)\n",
+    "    c2 = zx.extract.extract_simple(g2, up_to_perm=True).to_basic_gates()\n",
+    "    c3 = zx.optimize.basic_optimization(c2.copy(), do_swaps=False).to_basic_gates()\n",
+    "    c4 = zx.optimize.basic_optimization(c2.copy(), do_swaps=True).to_basic_gates()\n",
+    "    if c4.twoqubitcount() < c3.twoqubitcount(): return c4\n",
+    "    return c3\n",
+    "\n",
+    "def nu(c):\n",
+    "    g = c.to_graph()\n",
+    "    zx.simplify.to_gh(g)\n",
+    "    g2 = zx.simplify.flow_reduce(g,x=None, flow='g',quiet=True)\n",
+    "    c2 = zx.extract.extract_circuit(g2, up_to_perm=True).to_basic_gates()\n",
+    "    c3 = zx.optimize.basic_optimization(c2.copy(), do_swaps=False).to_basic_gates()\n",
+    "    c4 = zx.optimize.basic_optimization(c2.copy(), do_swaps=True).to_basic_gates()\n",
+    "    if c4.twoqubitcount() < c3.twoqubitcount(): return c4\n",
     "    return c3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing int_cliff2_2 on c_17                                       : 100%|██████████| 20/20 [00:10<00:00,  1.95it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "b.add_simplification_func(int_cliff2, 'int_cliff2_2', groups_to_run=['generated'],verify=False)"
+    "b.add_simplification_func(basic, 'Basic', groups_to_run=[],verify=False)\n",
+    "b.add_simplification_func(full_reduce, 'full_reduce', groups_to_run=[],verify=False)\n",
+    "b.add_simplification_func(int_cliff, 'int_cliff', groups_to_run=[],verify=False)\n",
+    "b.add_simplification_func(int_cliff_lim, 'int_cliff_lim', groups_to_run=[],verify=False)\n",
+    "b.add_simplification_func(int_cliff_lim_flow, 'int_cliff_lim_flow', groups_to_run=[],verify=False)\n",
+    "b.add_simplification_func(nu_flow, 'nu_flow', groups_to_run=[],verify=False)\n",
+    "b.add_simplification_func(nu, 'nu', groups_to_run=[],verify=False)"
    ]
   },
   {
@@ -328,29 +305,13 @@
     }
    ],
    "source": [
-    "base_params = [1,1,1,0,0,0,0,0,0]\n",
-    "opt_params = [[0.30, 0.39, 0.31, -1.81, 2.47, 0.35, 1.08, -1.15, 1.11], #1\n",
-    "        [0.34, 0.37, 0.29, 22.32, 2.33, -18.51, 1.92, -26.60, -9.51], #2\n",
-    "        [0.50, 0.06, 0.44, -3.99, 1.94, -16.24, -14.81, -11.30, -11.49], #3\n",
-    "        [0.51, 0.04, 0.45, -13.43, -7.01, -14.67, -2.37, -5.75, -2.45], #4\n",
-    "        [0.50, 0.06, 0.44, 0.68, 14.78, -14.58, 8.62, -1.26, -10.86], #5\n",
-    "        [0.51, 0.04, 0.45, -7.08, 10.69, -8.13, 3.25, 0.71, -16.19], #6\n",
-    "        [0.29, 0.21, 0.50, 1.42, -11.92, -8.86, -10.04, -16.48, 2.84], #7\n",
-    "        [0.08, 0.70, 0.22, -11.13, 3.59, -5.92, 10.02, -6.71, -5.46], #8\n",
-    "        [0.50, 0.06, 0.44, 5.83, 10.42, 2.09, 3.23, -2.41, -5.48], #9\n",
-    "        [0.34, 0.37, 0.29, 12.76, 16.65, -5.62, -8.72, -21.95, 6.17], #10\n",
-    "        [0.3, 0.5, 0.2, -1.81, 2.47, 0.35, 1.08, -1.15, 1.11], #11\n",
-    "        [0.45, 0.55, 0.0, -1.81, 2.47, 0.35, 1.08, -1.15, 1.11]] #12\n",
-    "\n",
-    "# b.add_simplification_func(zx_heur, 'Heur', groups_to_run=['generated'],verify=False)\n",
-    "# b.add_simplification_func(basic, 'Basic', groups_to_run=['generated'],verify=False)\n",
-    "# b.add_simplification_func(int_cliff, 'Int_Clifford', groups_to_run='all',verify=False)\n",
-    "# b.add_simplification_func(full_reduce, 'Full_Reduce', groups_to_run='all',verify=False)\n",
-    "b.add_simplification_func(partial(cFlow_reduce, params=base_params), 'cFlow2', groups_to_run=['generated'],verify=False)\n",
-    "b.add_simplification_func(partial(gFlow_reduce, params=base_params), 'gFlow2', groups_to_run=['generated'],verify=False)\n",
-    "# for i, params in enumerate(opt_params):\n",
-    "        # b.add_simplification_func(partial(cFlow_reduce, params=params), f'cFlow_{i+1}', groups_to_run='all',verify=False)\n",
-    "        # b.add_simplification_func(partial(gFlow_reduce, params=params), f'gFlow_{i+1}', groups_to_run='all',verify=False)"
+    "b.add_simplification_func(basic, 'Basic', groups_to_run=['fast'],verify=False)\n",
+    "b.add_simplification_func(full_reduce, 'full_reduce', groups_to_run=['fast'],verify=False)\n",
+    "b.add_simplification_func(int_cliff, 'int_cliff', groups_to_run=['fast'],verify=False)\n",
+    "b.add_simplification_func(int_cliff_lim, 'int_cliff_lim', groups_to_run=['fast'],verify=False)\n",
+    "b.add_simplification_func(int_cliff_lim_flow, 'int_cliff_lim_flow', groups_to_run=['fast'],verify=False)\n",
+    "b.add_simplification_func(nu_flow, 'nu_flow', groups_to_run=['fast'],verify=False)\n",
+    "b.add_simplification_func(nu, 'nu', groups_to_run=['fast'],verify=False)\n"
    ]
   },
   {
@@ -5230,7 +5191,7 @@
     }
    ],
    "source": [
-    "funcs = ['Basic', 'Int_Clifford', 'Full_Reduce', 'int_cliff2', 'int_cliff2_flow','int_cliff2_2', 'int_cliff2_flow_2']\n",
+    "funcs = [''Basic', 'Int_Clifford', 'Full_Reduce', 'int_cliff2', 'int_cliff2_flow','int_cliff2_2', 'int_cliff2_flow_2'']\n",
     "t_probs = [0.015*i for i in range(11)]\n",
     "fig = b.Pt_graphs(funcs=funcs, qubits=8, depth=400, cnot_prob=0.3, t_probs=t_probs, ys=['Gates','2Q Count','T Count'], reps=20, overwrite=False, random_seed=42)"
    ]
