--- a/optimisation/benchmarking_2.ipynb
+++ b/optimisation/benchmarking_2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
      "output_type": "stream",
      "text": [
       "Circuit attributes:  ['Qubits', 'Gates', '2Q Count', 'T Count', 't_simp', 't_opt']\n",
-      "Loaded functions:  ['int_cliff', 'int_cliff_tel', 'int_cliff_2Q', 'int_cliff2', 'int_cliff2_flow', 'nu_flow']\n",
+      "No loaded functions\n",
       "Loaded routines:  ['NRSCM']\n",
       "Loaded circuit groups:  ['fast']\n"
      ]
@@ -65,12 +65,6 @@
        "      <th></th>\n",
        "      <th>Original</th>\n",
        "      <th>NRSCM</th>\n",
-       "      <th>int_cliff</th>\n",
-       "      <th>int_cliff2</th>\n",
-       "      <th>int_cliff2_flow</th>\n",
-       "      <th>int_cliff_2Q</th>\n",
-       "      <th>int_cliff_tel</th>\n",
-       "      <th>nu_flow</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -78,23 +72,14 @@
        "      <th>fast</th>\n",
        "      <td>Y</td>\n",
        "      <td>Y</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>-</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Original NRSCM int_cliff int_cliff2 int_cliff2_flow int_cliff_2Q  \\\n",
-       "fast        Y     Y         Y          Y               Y            Y   \n",
-       "\n",
-       "     int_cliff_tel nu_flow  \n",
-       "fast             Y       -  "
+       "     Original NRSCM\n",
+       "fast        Y     Y"
       ]
      },
      "metadata": {},
@@ -102,10 +87,10 @@
     }
    ],
    "source": [
-    "b = benchmark(dirpath='benchmark_int')\n",
-    "# b = benchmark()\n",
-    "# b.load_circuits(os.path.join('..', 'circuits', 'benchmarking', 'Fast', 'before'), group_name='fast')\n",
-    "# b.load_circuits(os.path.join('..', 'circuits', 'benchmarking', 'Fast', 'nrscm'), group_name='fast', simp_strategy='NRSCM')\n",
+    "# b = benchmark(dirpath='benchmark_int')\n",
+    "b = benchmark()\n",
+    "b.load_circuits(os.path.join('..', 'circuits', 'benchmarking', 'Fast', 'before'), group_name='fast')\n",
+    "b.load_circuits(os.path.join('..', 'circuits', 'benchmarking', 'Fast', 'nrscm'), group_name='fast', simp_strategy='NRSCM')\n",
     "b.show_attributes()"
    ]
   },
@@ -131,31 +116,24 @@
     "    if c4.twoqubitcount() < c3.twoqubitcount(): return c4\n",
     "    return c3\n",
     "\n",
-    "def int_cliff_lim(c):\n",
+    "base_params = [1,1,1,0,0,0,0,0,0]\n",
+    "opt_params = [0.30, 0.39, 0.31, -1.81, 2.47, 0.35, 1.08, -1.15, 1.11]\n",
+    "\n",
+    "def int_(c):\n",
     "    g = c.to_graph()\n",
     "    zx.simplify.to_gh(g)\n",
-    "    g2 = zx.simplify.flow_reduce_2(g,x=None, flow='g',quiet=True)\n",
+    "    g2 = zx.simplify.flow_reduce_2(g,x=base_params, flow='g',quiet=True)\n",
     "    c2 = zx.extract.extract_circuit(g2, up_to_perm=False).to_basic_gates()\n",
     "    c3 = zx.optimize.basic_optimization(c2.copy(), do_swaps=False).to_basic_gates()\n",
     "    c4 = zx.optimize.basic_optimization(c2.copy(), do_swaps=True).to_basic_gates()\n",
     "    if c4.twoqubitcount() < c3.twoqubitcount(): return c4\n",
     "    return c3\n",
     "\n",
-    "def int_cliff_lim_flow(c):\n",
+    "def nu_(c):\n",
     "    g = c.to_graph()\n",
     "    zx.simplify.to_gh(g)\n",
-    "    g2 = zx.simplify.flow_reduce_2(g,x=None,quiet=True)\n",
-    "    c2 = zx.extract.extract_simple(g2, up_to_perm=False).to_basic_gates()\n",
-    "    c3 = zx.optimize.basic_optimization(c2.copy(), do_swaps=False).to_basic_gates()\n",
-    "    c4 = zx.optimize.basic_optimization(c2.copy(), do_swaps=True).to_basic_gates()\n",
-    "    if c4.twoqubitcount() < c3.twoqubitcount(): return c4\n",
-    "    return c3\n",
-    "\n",
-    "def nu_flow(c):\n",
-    "    g = c.to_graph()\n",
-    "    zx.simplify.to_gh(g)\n",
-    "    g2 = zx.simplify.flow_reduce(g,x=None, flow='causal',quiet=True)\n",
-    "    c2 = zx.extract.extract_simple(g2, up_to_perm=False).to_basic_gates()\n",
+    "    g2 = zx.simplify.flow_reduce(g,x=base_params, flow='g',quiet=True)\n",
+    "    c2 = zx.extract.extract_circuit(g2, up_to_perm=False).to_basic_gates()\n",
     "    c3 = zx.optimize.basic_optimization(c2.copy(), do_swaps=False).to_basic_gates()\n",
     "    c4 = zx.optimize.basic_optimization(c2.copy(), do_swaps=True).to_basic_gates()\n",
     "    if c4.twoqubitcount() < c3.twoqubitcount(): return c4\n",
@@ -182,9 +160,8 @@
    "source": [
     "b.add_simplification_func(basic, 'Basic', groups_to_run=['fast'],verify=True)\n",
     "b.add_simplification_func(full_reduce, 'full_reduce', groups_to_run=['fast'],verify=True)\n",
-    "b.add_simplification_func(int_cliff_lim, 'int_cliff2', groups_to_run=['fast'],verify=True)\n",
-    "b.add_simplification_func(int_cliff_lim_flow, 'int_cliff2_flow', groups_to_run=['fast'],verify=True)\n",
-    "b.add_simplification_func(nu_flow, 'nu_flow', groups_to_run=[],verify=True, rerun=True)"
+    "b.add_simplification_func(int_, 'int_cliff_g_base_place', groups_to_run=['fast'],verify=True)\n",
+    "b.add_simplification_func(nu_, 'nu_', groups_to_run=[],verify=True, rerun=True)\n"
    ]
   },
   {
@@ -1248,7 +1225,7 @@
   "kernelspec": {
    "display_name": "pyzx",
    "language": "python",
-   "name": "pyzx"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1260,7 +1237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
