--- a/optimisation/benchmarking_3.ipynb
+++ b/optimisation/benchmarking_3.ipynb
@@ -242,6 +242,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Circuit attributes:  ['Qubits', 'Gates', '2Q Count', 'T Count', 't_simp', 't_opt']\n",
+      "Loaded functions:  ['int_c', 'int_g']\n",
+      "Loaded routines:  ['NRSCM']\n",
+      "Loaded circuit groups:  ['fast']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Original</th>\n",
+       "      <th>NRSCM</th>\n",
+       "      <th>int_c</th>\n",
+       "      <th>int_g</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>fast</th>\n",
+       "      <td>Y</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Original NRSCM int_c int_g\n",
+       "fast        Y     Y     Y     Y"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "b.show_attributes()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
